# anomaly

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.cfg
detectors/: madi_detector.py
utils/: aux_utils.py  plot_utils.py  sample_utils.py
