[metadata]
name = anomaly
version = 0.1.0
author = John Sipple, Catherine Nguyen
author_email = sipplej@gmail.com, catherinehnguyen15@gmail.com
url = https://github.com/vyzerionai/anomaly
license = Apache-2.0
description = Anomaly Detection
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
  =utils
python_requires = >=3.9
include_package_data = True
install_requires =
    setuptools >= 40.2.0
    importlib_resources ; python_version<'3.7'
    numpy>=1.16.0
    scipy>=1.2.1
    tensorflow>=2.16.1,<=2.19.0
    typing_extensions ; python_version<'3.8'
    pandas>=0.24.2
    seaborn>=0.11.0

[options.packages.find]
where = utils
